<resources>
    <string name="app_name">ShoopingList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="shop_list">ShopList</string>
    <string name="new_item_new">new item</string>
    <string name="general">General</string>
    <string name="choose_note_style">Choose note style</string>
    <string name="choose_time_format">Choose time format</string>
    <string name="remove_ads">Remove ads</string>
    <string name="remove_ads_summary">Remove all ads from this app</string>
    <string name="theme_settings">Theme settings</string>
    <string name="choose_theme">Choose theme</string>
    <string name="note_text_settings">Note text settings</string>
    <string name="title_text_size">Title text size</string>
    <string name="content_text_size">Content text size</string>
    <string name="delete_alert">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="new_list">New list name</string>
    <string name="list_name">List name</string>
    <string name="create_list">Create list</string>
    <string name="update">Update</string>
    <string name="update_list_item">Update list item</string>
    <string name="update_edit_list_item">Update</string>
    <string name="inter_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="delete_list">Delete list</string>
    <string name="clear_list">Clear list</string>
    <string name="share_list">Share list</string>
    <string name="save_item">Save item</string>
    <string name="new_item">New item</string>
    <string name="empty">Empty</string>
    <string name="save">Save</string>
    <string name="bold">Bold</string>
    <string name="delete_item">Do you want delete this item?</string>
    <string name="color">Color</string>
</resources>